fix: border-spacing result table
git-svn-id: http://halodev.ontoprise.com/svn/HaloSMWExtension/trunk@3092 f80b7aa0-dfcc-4e65-a0d9-74108174cbc8

--- a/extensions/UnifiedSearch/skin/unified_search.css
+++ b/extensions/UnifiedSearch/skin/unified_search.css
@@ -68,6 +68,10 @@
     list-style-type: none;
 }
 
+#us_queryresults {
+	border-spacing: 10px;
+}
+
 #us_searchresults .searchmatch {
     color:black;
     font-weight: bold;
